--- a/build.css
+++ b/build.css
@@ -5,6 +5,7 @@ html {
 body {
   font-family: 'Roboto Slab', serif;
   text-align: center;
+  -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -45,6 +46,7 @@ h1 .name {
 .fa {
   color: #85c062;
   font-size: 3em;
+  -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
   padding-left: 0.25em;
   padding-right: 0.25em;
@@ -60,6 +62,7 @@ h1 .name {
 }
 
 .fa:hover {
+  -webkit-transition: all 400ms ease-in-out;
   transition: all 400ms ease-in-out;
   color: black;
   top: -2px;
@@ -109,12 +112,20 @@ body {
 
 
 .fadein1 {
+            -webkit-animation: fadein 0.8s;
             animation: fadein 0.8s;
 }
 
 .fadein2 {
+            -webkit-animation: fadein 0.8s;
             animation: fadein 0.8s;
+            -webkit-animation-delay: 0.4s;
             animation-delay: 0.4s;
+}
+
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 @keyframes fadein {
