--- a/source/style.css
+++ b/source/style.css
@@ -108,16 +108,14 @@ body {
 }
 
 
-.fadein1 {
-            animation: fadein 0.8s;
-}
-
-.fadein2 {
-            animation: fadein 0.8s;
-            animation-delay: 0.4s;
+.fadein {
+  animation: fadein 0.8s;
+  animation-fill-mode: forwards;
+  animation-delay: 1s;
+  opacity: 0;
 }
 
 @keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  0% { opacity: 0; }
+  100%   { opacity: 1; }
 }
