--- a/source/style.css
+++ b/source/style.css
@@ -107,11 +107,19 @@ body {
   }
 }
 
+/* animation madness */
 
-.fadein {
+.fadein1 {
   animation: fadein 0.8s;
   animation-fill-mode: forwards;
-  animation-delay: 1s;
+  animation-delay: 0.4s;
+  opacity: 0;
+}
+
+.fadein2 {
+  animation: fadein 0.8s;
+  animation-fill-mode: forwards;
+  animation-delay: 1.2s;
   opacity: 0;
 }
 
