animate more! And wait for it until page is loaded

--- a/source/style.css
+++ b/source/style.css
@@ -109,18 +109,25 @@ body {
 
 /* animation madness */
 
-.fadein1 {
-  animation: fadein 0.8s;
-  animation-fill-mode: forwards;
-  animation-delay: 0.4s;
+.fadein {
   opacity: 0;
 }
 
-.fadein2 {
-  animation: fadein 0.8s;
+.delay-0.run {
+  animation: fadein 1s;
   animation-fill-mode: forwards;
-  animation-delay: 1.2s;
-  opacity: 0;
+}
+
+.delay-1.run {
+  animation: fadein 1s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+}
+
+.delay-2.run {
+  animation: fadein 1s;
+  animation-delay: 1.5s;
+  animation-fill-mode: forwards;
 }
 
 @keyframes fadein {
