--- a/source/main.css
+++ b/source/main.css
@@ -1,3 +1,5 @@
+@import "variables.css";
+
 html {
   height: 100%;
 }
@@ -38,7 +40,7 @@ img {
 }
 
 h1 .name {
-  color: #FF52A9;
+  color: var(--pink);
   white-space: nowrap;
 }
 
