--- a/source/main.css
+++ b/source/main.css
@@ -44,6 +44,10 @@ h1 .name {
   white-space: nowrap;
 }
 
+.pink {
+  color: var(--pink);
+}
+
 .attribution {
   text-align: right;
   font-size: 0.8em;
