--- a/source/fade.css
+++ b/source/fade.css
@@ -21,6 +21,10 @@
   animation-delay: 1.5s;
 }
 
+.delay-4.run {
+  animation-delay: 2s;
+}
+
 @keyframes fadein {
   0% { opacity: 0; }
   100%   { opacity: 1; }
