tweak colours some more

--- a/source/variables.css
+++ b/source/variables.css
@@ -3,5 +3,5 @@
   --clickable-hover-color: color(var(--clickable-color) lightness(82%));
   --highlight-color: #54A821;
   --image-size: 10em;
-  --black: #005;
+  --text-color: #004;
 }
